--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: maratumba/postgıs-tr
+          images: maratumba/postgis-tr
 
       - name: Build and push Docker image
         id: push
