--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,6 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: build the image
         run: |
-          docker buildx push --push \
+          docker buildx build --push \
             --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:latest \
             --platform linux/amd64,linux/arm64 .
