--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,5 +34,5 @@ jobs:
       - name: build the image
         run: |
           docker buildx build --push \
-            --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:latest \
+            --tag maratumba/${{ env.IMAGE_NAME}}:latest \
             --platform linux/amd64,linux/arm64 .
